(fix) Fixed broken styles in outpatient table filters

--- a/packages/esm-outpatient-app/src/active-visits/active-visits-table.scss
+++ b/packages/esm-outpatient-app/src/active-visits/active-visits-table.scss
@@ -50,11 +50,6 @@
   justify-content: center;
 }
 
-.tableContainer {
-  margin: 0 1rem;
-  padding: 0;
-}
-
 .search {
   max-width: 16rem;
 
@@ -66,6 +61,8 @@
 
 .tableContainer {
   background-color: $ui-01;
+  margin: 0 1rem;
+  padding: 0;
 
   a {
     text-decoration: none;
@@ -75,34 +72,13 @@
     color: $text-02;
   }
 
-  :global(.cds--data-table-content) {
-    border: 1px solid $ui-03;
-    overflow: visible;
-  }
-
   :global(.cds--data-table) {
-    background: $ui-03;
+    background-color: $ui-03;
   }
 
-  :global(.cds--data-table-header) {
-    padding: 0;
-  }
-
-  :global(.cds--table-toolbar) {
-    position: relative;
-    height: 2rem;
-    overflow: visible;
-    background-color: $ui-01;
-  }
-
-  :global(.cds--toolbar-content),
-  :global(.cds--toolbar-search-container-expandable) {
-    height: 2rem;
-    margin-bottom: 0.25rem;
-  }
-
-  :global(.cds--data-table--zebra tbody tr[data-child-row]:hover td) {
-    background-color: $ui-02;
+  .toolbarContent {
+    height: spacing.$spacing-07;
+    margin-bottom: spacing.$spacing-02;
   }
 }
 
